--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
 					  <span></span>
 					</div>
 				  </div>
-				<div class="">
-					<span class="uppercase"></span>
+				<div style="height">
 					<span class="uppercase color-red" id="tabMessage"></span>
 				</div>
+			</div>
+			<div class="bottom-container">
+				<span>I do not own any assets in this website. Credits to their respective owners.</span>
 			</div>
 		</div>
 	</body>
