--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					  <span></span>
 					</div>
 				  </div>
-				<div style="height">
+				<div style="height: 17px;">
 					<span class="uppercase color-red" id="tabMessage"></span>
 				</div>
 			</div>
