--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 				</div>
 				<div class="mid-container">
 				  <div class="box-options-container">
-					<div class="box-options tavern-btn" onmouseover="updateTabMessage('tavern')" onmouseleave="clearTabMessage()"> 
+					<a class="box-options tavern-btn" onmouseover="updateTabMessage('tavern')" onmouseleave="clearTabMessage()" href="tavern.html"> 
 					  <span></span>
-					</div>
-					<div class="box-options showcase-btn" onmouseover="updateTabMessage('showcase')" onmouseleave="clearTabMessage()">
+					</a>
+					<a class="box-options showcase-btn" onmouseover="updateTabMessage('showcase')" onmouseleave="clearTabMessage()">
 					  <span></span>
-					</div>
-					<div class="box-options mailman-btn" onmouseover="updateTabMessage('mailman')" onmouseleave="clearTabMessage()">
+					</a>
+					<a class="box-options mailman-btn" onmouseover="updateTabMessage('mailman')" onmouseleave="clearTabMessage()">
 					  <span></span>
-					</div>
-					<div class="box-options devquill-btn" onmouseover="updateTabMessage('devquill')" onmouseleave="clearTabMessage()">
+					</a>
+					<a class="box-options devquill-btn" onmouseover="updateTabMessage('devquill')" onmouseleave="clearTabMessage()">
 					  <span></span>
-					</div>
+					</a>
 				  </div>
 				<div style="height: 17px;">
 					<span class="uppercase color-red" id="tabMessage"></span>
